# tuigreet

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml
docs/: PLAN.md
examples/: Sweet.toml  cli.md  config.toml  greetd_config.toml  theme.toml
libratgreet/: Cargo.toml
libratgreet/src/: lib.rs  strings.rs
libratgreet/src/event/: mod.rs
libratgreet/src/greeter/: align.rs  mod.rs
libratgreet/src/info/: mod.rs
libratgreet/src/ipc/: mod.rs  safe_debug.rs  tests.rs
libratgreet/src/keyboard/: mod.rs  tests.rs
libratgreet/src/model/: menu.rs  mod.rs  power_item.rs
libratgreet/src/model/masked/: mod.rs  tests.rs
libratgreet/src/model/sessions/: mod.rs  tests.rs
libratgreet/src/power/: mod.rs
libtuigreet/: Cargo.toml
libtuigreet/src/: lib.rs  macros.rs
libtuigreet/src/event/: mod.rs
libtuigreet/src/greeter/: mod.rs  tests.rs
libtuigreet/src/info/: mod.rs
libtuigreet/src/ipc/: mod.rs  tests.rs
libtuigreet/src/keyboard/: mod.rs  tests.rs
libtuigreet/src/model/: mod.rs  power_item.rs  users.rs
libtuigreet/src/model/sessions/: mod.rs  tests.rs
libtuigreet/src/power/: mod.rs
ratgreet/: Cargo.toml
ratgreet/src/: lib.rs  logger.rs  main.rs
ratgreet/src/app/: greeter_init.rs  mod.rs
ratgreet/src/cli/: mod.rs  tests.rs
ratgreet/src/color/: mod.rs  tests.rs
ratgreet/src/config/: mod.rs  tests.rs
ratgreet/src/settings/: mod.rs  tests.rs
ratgreet/src/theme/: mod.rs  tests.rs
ratgreet/src/ui/: command.rs  mod.rs  processing.rs  prompt.rs  strings.rs
ratgreet/src/ui/common/: menu.rs  mod.rs  style.rs
ratgreet/src/ui/util/: mod.rs  tests.rs
src/: main.rs
src/cli/: mod.rs  tests.rs
src/config/: mod.rs  tests.rs
src/event/: mod.rs
src/greeter/: mod.rs  tests.rs
src/info/: mod.rs
src/integration/common/: mod.rs
src/ipc/: mod.rs  tests.rs
src/keyboard/: mod.rs  tests.rs
src/power/: mod.rs
src/settings/: mod.rs  tests.rs
src/theme/: tests.rs
src/ui/: util.rs
src/ui/common/: style.rs
tests/: Cargo.toml
tests/src/: auth.rs  display.rs  exit.rs  lib.rs  menus.rs  movement.rs  remember.rs
tests/src/common/: backend.rs  mod.rs  output.rs
tuigreet/: Cargo.toml
tuigreet/src/: lib.rs  logger.rs  macros.rs  main.rs
tuigreet/src/app/: mod.rs
tuigreet/src/cli/: mod.rs  tests.rs
tuigreet/src/config/: tests.rs
tuigreet/src/settings/: greeter_init.rs  mod.rs  tests.rs
tuigreet/src/theme/: mod.rs  tests.rs
tuigreet/src/ui/: command.rs  mod.rs  processing.rs  prompt.rs  strings.rs
tuigreet/src/ui/common/: menu.rs
tuigreet/src/ui/util/: mod.rs  tests.rs
