[package]
name = "libtuigreet"
version = "0.9.1"
edition = "2018"
license = "GPL-3.0-or-later"
publish = false

[features]
test-harness = []

[dependencies]
smart-default = "0.7"
chrono = "0.4"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
greetd_ipc = { version = "0.10", features = ["tokio-codec"] }
rustix = { version = "0.38", features = ["system"] }
rust-ini = "0.21"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
zeroize = "1"
uzers = "0.12"
tracing-appender = "0.2"
tracing = "0.1"
utmp-rs = "0.3"

[dev-dependencies]
tempfile = "3"
