[package]
name = "tuigreet-tests"
version = "0.9.1"
edition = "2018"
publish = false

[dependencies]
libtuigreet = { path = "../libtuigreet", features = ["test-harness"] }
tuigreet = { path = "../tuigreet", features = ["test-harness"] }
chrono = "0.4"
greetd-stub = "0.3"
tempfile = "3"
unicode-width = "0.1"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
tui = { package = "ratatui", version = "0.27", default-features = false, features = [
  "crossterm",
  "unstable"
] }
