[package]
name = "ratgreet-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
libratgreet = { path = "../libratgreet", features = ["test-harness"] }
ratgreet = { path = "../ratgreet", features = ["test-harness"] }
chrono.workspace = true
greetd-stub = "0.3"
tempfile.workspace = true
unicode-width = "0.2"
crossterm.workspace = true
tokio = { workspace = true, features = [
  "net",
  "sync",
  "time",
  "process",
] }
ratatui.workspace = true
